now possible to remove contact info from an organiser.
